fix: don't add border radius to the bullet wrapped

--- a/common/common.scss
+++ b/common/common.scss
@@ -155,7 +155,7 @@ tr[data-category-id="275"] {
 }
 
 .badge-wrapper {
-    &.bullet {
+    .bullet {
         border: 1px solid rgba(0,0,0,0.08);
         border-radius: 5px;
     }
